# housing-program

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_WINDOWS.md  ROADMAP.md  docker-compose.digitalocean.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_app.bat
.do/: app-postgres.yaml  app.yaml
.github/workflows/: ci.yml  deploy-digitalocean.yml
data/: listings.json
deploy/: QUICKSTART-DIGITALOCEAN.md  digitalocean.md  security-digitalocean.md
deploy/nginx/: default.conf
migrations/sql/: 001_initial_schema.sql  002_web_refresh_tokens.sql  003_admin_audit_provider_stats.sql
scripts/: apply_migrations.py  build_desktop.py  deploy_digitalocean_app.sh  deploy_digitalocean_droplet.sh
src/: main.py
src/desktop/: main.py
src/housing_scraper/: __init__.py  app_launcher.py  area_refresher.py  auth.py  auth_manager.py  auth_ui.py  collector.py  config.py  filter_builder.py  filters.py  jwt_auth.py  lister_interface.py  master_listing_db.py  menu.py  migrations.py  models.py  observability.py  result_formatter.py  role_auth.py  search_history.py  search_manager.py  storage.py
src/housing_scraper/sources/: apartments.py  base.py  craigslist.py  example.py  hotpads.py  neighborly.py  padmapper.py  provider_catalog.py  realtor.py  rentals.py  trulia.py  (+3 more)
src/ui/: __init__.py  app_shell.py  design_notes.md  desktop_gui.py  result_window.py  sidebar_layout.py
src/web/: main.py  server.py
src/worker/: main.py
tests/: test_api_auth_flow.py  test_integration_db.py  test_jwt_auth.py  test_migrations_manager.py  test_storage.py
