[project]
name = "housing-aggregator"
version = "0.1.0"
description = "A modular housing listing aggregator for public housing search sources"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.3",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "python-dotenv>=1.0.1",
  "PyMySQL>=1.1.1",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic[email]>=2.8.2",
  "pyinstaller>=6.10.0",
  "PyJWT>=2.9.0",
  "pytest>=8.3.3"
]

[tool.black]
line-length = 88
target-version = ["py312"]
